@@ -1,21 +1,14 @@
 {
-  "timestamp" : "2022-05-29T16:21:10Z",
-  "count_outdated" : 267,
-  "uniques_outdated" : 172,
-  "count" : 293,
-  "uniques" : 190,
+  "timestamp" : "2022-05-30T01:23:42Z",
+  "count_outdated" : 269,
+  "uniques_outdated" : 174,
+  "count" : 294,
+  "uniques" : 191,
   "clones" : [
     {
-      "timestamp": "2022-05-15T00:00:00Z",
+      "timestamp": "2022-05-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -63,8 +56,8 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
