@@ -1,15 +1,10 @@
 {
-  "count": 26,
+  "count": 25,
   "uniques": 11,
   "clones": [
     {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -44,7 +39,7 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
