@@ -1,3 +1,10 @@
+2022-05-30T01:23:42Z:
+* notice: last 14d: unq all: 11 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 172 267 / 190 293
+* notice: next accum: outdated-unq outdated-all / unq all: 174 269 / 191 294
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-16 2022-05-29]
+
 2022-05-29T16:21:10Z:
 * notice: last 14d: unq all: 11 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 172 267 / 191 294
